--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">
-        <div class="header-logo">Header Logo</div>
-        <div class="header-links">
-            <div><a>header link one</a></div>
-            <div><a>header link two</a></div>
-            <div><a>header link three</a></div>
+    <div class="hero">
+        <div class="header">
+            <div class="header-logo">Header Logo</div>
+            <div class="header-links">
+                <div><a>header link one</a></div>
+                <div><a>header link two</a></div>
+                <div><a>header link three</a></div>
+            </div>
+        </div>
+        <div class="hero-content">
+            <div class="hero-maintext">This website is awesome</div>
+            <div class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <div class="hero-signup"><button>Sign Up</button></div>
+            <img src="images/pexels-dung-eric.jpg">
         </div>
     </div>
 </body>
