Finish first section of the page

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
             </div>
         </div>
         <div class="hero-content">
-            <div class="hero-maintext">This website is awesome</div>
-            <div class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-            <div class="hero-signup"><button>Sign Up</button></div>
+            <div class="hero-text">
+                <div class="hero-maintext">This website is awesome</div>
+                <div class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <div class="hero-signup"><button>Sign Up</button></div>
+            </div>
             <img src="images/pexels-dung-eric.jpg">
         </div>
     </div>
