Implement second section and actually add roboto font properly

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
     <div class="hero">
@@ -23,6 +24,27 @@
                 <div class="hero-signup"><button>Sign Up</button></div>
             </div>
             <img src="images/pexels-dung-eric.jpg">
+        </div>
+    </div>
+    <div class="information">
+        <div class="information-header">Some random information.</div>
+        <div class="information-content">
+            <div class="illustration">
+                <img src="images/pexels-anastasia-nagibina.jpg">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="illustration">
+                <img src="images/pexels-anastasia-nagibina.jpg">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="illustration">
+                <img src="images/pexels-anastasia-nagibina.jpg">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="illustration">
+                <img src="images/pexels-anastasia-nagibina.jpg">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
         </div>
     </div>
 </body>
