--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,100italic,300italic,400italic,500italic,500,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <div class="hero">
@@ -45,6 +45,17 @@
                 <img src="images/pexels-anastasia-nagibina.jpg">
                 <div>this is some subtext under an illustration or image</div>
             </div>
+        </div>
+    </div>
+    <div class="quote">
+        <div class="quote-content">
+            This is an inspiring quote, or a testimonial from
+            a customer. Maybe it's just filling up space, or maybe
+            people will actually read it. Who knows? All I know
+            is that it looks nice.
+        </div>
+        <div class="quote-author">
+            -Thor, God of Thunder
         </div>
     </div>
 </body>
