--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="hero-text">
                 <div class="hero-maintext">This website is awesome</div>
                 <div class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                <div class="hero-signup"><button>Sign Up</button></div>
+                <div class="signup"><button>Sign Up</button></div>
             </div>
             <img src="images/pexels-dung-eric.jpg">
         </div>
@@ -57,6 +57,15 @@
         <div class="quote-author">
             -Thor, God of Thunder
         </div>
+    </div>
+    <div class="call">
+        <div class="call-content">
+            <div class="call-text">Call to action! It's time!</div>
+            <div class="call-subtext">Sign up for our product
+                by clicking that button right over there!
+            </div>
+        </div>
+        <div class="signup"><button>Sign Up</button></div>
     </div>
 </body>
 </html>
