--- a/index.html
+++ b/index.html
@@ -67,5 +67,8 @@
         </div>
         <div class="signup"><button>Sign Up</button></div>
     </div>
+    <div class="footer">
+        Copyright © The Odin Project 2021
+    </div>
 </body>
 </html>
