--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         </div>
         <div class="signup"><button>Sign Up</button></div>
     </div>
-    <div class="footer">
-        Copyright © The Odin Project 2021
-    </div>
+    <footer>
+        Copyright © The Odin Project 2025
+    </footer>
 </body>
 </html>
